fix: remove overflow from panel to make drodowns in panel work
Fixes #13101

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -2259,7 +2259,6 @@ tbody.warning {
 .panel {
   border-radius: var(--border-radius);
   border: var(--border);
-  overflow-y: hidden;
 }
 
 .panel-default > .panel-heading {
